Fixed styling for About section on mobile and made Nav menu less transparent

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -27,9 +27,14 @@
 }
 
 @media screen and (max-width:940px){
+    .about {
+        flex-direction: column;
+    }
+
     .about > img {
         width: 150px;
         height: 150px;
+        align-self: center;
     }
 }
 
