--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -82,7 +82,7 @@
         right: -100%;
         top: 5rem;
         flex-direction: column;
-        background: rgba(255, 255, 255, 0.5);
+        background: rgba(255, 255, 255, 0.85);
         border-radius: 5px;
         width: 100px;
         height: 90vh;
